Fixed single book view
image had too much margin-top

--- a/app/app.css
+++ b/app/app.css
@@ -153,14 +153,17 @@ md-content {
   padding-top: 100px;
 }
 
-.singlePrice {
-  font-size: 18px;
-  align-self: center;
-}
-
 .singleBuy {
   padding-right: 5px;
   align-self: center;
+}
+
+#singleInfo {
+  padding-right: 5px;
+}
+
+#singleImg {
+  margin-top: unset;
 }
 
 .miniCartContainer1,
@@ -234,41 +237,42 @@ md-content {
   text-overflow: ellipsis;
 }
 
-#bookPrice {
+.bookPrice {
   font-size: 18px;
+  align-self: center;
 }
 
 .navbar {
-    margin-bottom: 0;
-    border-radius: 0;
+  margin-bottom: 0;
+  border-radius: 0;
 }
 
 .jumbotron {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 footer {
-    background-color: #f2f2f2;
-    padding: 25px;
+  background-color: #f2f2f2;
+  padding: 25px;
 }
 
 
 #myBtn {
-    display: none; /* Hidden by default */
-    position: relative; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    left: 50%; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-    background-color: #f65a5b; /* Set a background color */
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
+  display: none; /* Hidden by default */
+  position: relative; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  left: 50%; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: #f65a5b; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
 }
 
 #myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+  background-color: #555; /* Add a dark-grey background on hover */
 }
